# unicode-formal

./: .gitignore  CMakeLists.txt  README.org  targets.mk
doc/: model.org  workflow.org
etc/: clang-16-toolchain.cmake
papers/: unicode-formal.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.cpp
src/unicode_formal/: CMakeLists.txt  unicode_formal.cpp  unicode_formal.h  unicode_formal.t.cpp
